sftp: Fix crashes when data connection setup failed

destroy_connection() is called twice when setup of data connection failed.
Consequently g_hash_table_destroy() is called on already destroyed hash
table on finalize. Set conn->expected_replies to NULL in destroy_connection()
to fix the issue.

There is another crash on force unmount when setup of data connection failed.
fail_jobs() is called on already destroyed connection. Check usability of
the connection before use to avoid the crash.

Finally move the hast table initialization into the setup_connection,
because the initialization in g_vfs_backend_sftp_init() is confusing.

https://bugzilla.gnome.org/show_bug.cgi?id=753311